styles.css
html {
  background-color: #f5f5dc;
  box-sizing: border-box;
}

body {
  color: #2f4f4f;
  font-family: "Times New Roman", Garamond, Gerogia, serif, sans-serif;
}

h1,
#voice,
#how-to {
  text-align: center;
}

h1 {
  height: 100px;
  width: 800px;
  font-size: 80px;
  margin: 1em auto 35px;
  padding-bottom: 25px;
  border-bottom: 1px solid #800000;
}
#voice {
  display: block;
  height: 50px;
  width: 410px;
  font-size: 36px;
  margin: auto;
}

#how-to {
  font-size: 58px;
  margin: 150px auto 10px;
}

.list {
  height: 820px;
  width: 700px;
  border-radius: 30px;
  list-style-type: none;
  font-size: 29px;
  margin: 0 auto 50px;
  padding: 40px 350px 20px 30px;
  border: 2px dotted #800000;
}

.ghormeh-card-container,
.beef-card-container {
  width: 1020px;
  border-bottom: 1px solid #800000;
}

a {
  color: inherit;
  text-decoration: none;
}

.card-text {
  margin: -255px 0 30px 320px;
  width: 700px;
}

.card-title {
  display: block;
  font-weight: bolder;
  margin: -20px 0;
}

.card-img {
  border-radius: 10px; 
}

.image-container {
  width: 300px;
  height: auto;
  padding: 30px 20px 30px 0px;
}

.recipe-button {
  background-color: #800000; 
  color: #f5f5dc; 
  border: none;
  padding: 10px 20px;
  border-radius: 8px;
  cursor: pointer;
  font-size: 18px;
  font-family: sans-serif;
  margin: 68px 0 0 550px;
  transition: background-color 0.2s;
}
.recipe-button:hover {
  background-color: #cc5500;
}

